// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TriangleSkewSpin> <TriangleSkewSpin> Mount: enzyme.mount 1`] = `
.css-0 > div,
[data-css-0] > div {
  animation-fill-mode: both;
  animation: animation_7yf550 3s 0s cubic-bezier(.09,.57,.49,.9) infinite;
  border-bottom: 20px solid #ffffff;
  border-left: 20px solid transparent;
  border-right: 20px solid transparent;
  height: 0px;
  width: 0px;
  -webkit-animation-fill-mode: both;
  -webkit-animation: animation_7yf550 3s 0s cubic-bezier(.09,.57,.49,.9) infinite;
}

<TriangleSkewSpin
  loading={true}
>
  <div
    data-css-0=""
  >
    <div />
  </div>
</TriangleSkewSpin>
`;

exports[`<TriangleSkewSpin> <TriangleSkewSpin> Render: enzyme.render 1`] = `
.css-0 > div,
[data-css-0] > div {
  animation-fill-mode: both;
  animation: animation_7yf550 3s 0s cubic-bezier(.09,.57,.49,.9) infinite;
  border-bottom: 20px solid #ffffff;
  border-left: 20px solid transparent;
  border-right: 20px solid transparent;
  height: 0px;
  width: 0px;
  -webkit-animation-fill-mode: both;
  -webkit-animation: animation_7yf550 3s 0s cubic-bezier(.09,.57,.49,.9) infinite;
}

<div
  data-css-0=""
>
  <div />
</div>
`;

exports[`<TriangleSkewSpin> <TriangleSkewSpin> Shallow: enzyme.shallow 1`] = `
.css-0 > div,
[data-css-0] > div {
  animation-fill-mode: both;
  animation: animation_7yf550 3s 0s cubic-bezier(.09,.57,.49,.9) infinite;
  border-bottom: 20px solid #ffffff;
  border-left: 20px solid transparent;
  border-right: 20px solid transparent;
  height: 0px;
  width: 0px;
  -webkit-animation-fill-mode: both;
  -webkit-animation: animation_7yf550 3s 0s cubic-bezier(.09,.57,.49,.9) infinite;
}

<div
  data-css-0=""
>
  <div />
</div>
`;
